# youtube-to-spotify

./: Cargo.toml  README.md
src/: auth.rs  client.rs  main.rs  routes.rs  spotify_search_response.rs  url.rs  youtube_playlist_item.rs
src/spotify/: Track.rs  mod.rs  search.rs
src/youtube/: mod.rs  playlist_item.rs
