[package]
name = "youtube-to-spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "blocking"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
url = "2.3.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"]}
base64 = "0.21.2"
serde_urlencoded = "0.7.1"


